# wagi

./: Cargo.toml
src/: wasm_module.rs
